<resources>
    <string name="app_name">A_C</string>
    <string name="name_noise">-</string>
    <string name="url_noise">"https://s0.vocaroo.com/media/download_temp/Vocaroo_s0P17h7OxVjq.mp3"</string>
    <string name="mhz">MHz</string>
    <string name="fm">FM</string>
    <string name="frequency">Frequency</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="instruction_title">Navodilo</string>
    <string name="ok">Razumem</string>
    <string name="task_completed">Naloga uspešno zaključena</string>
    <string name="artist">Artist</string>
    <string name="up_next">Up next:</string>
    <string name="current_song_index_usb">currentSongIxUSB</string>
    <string name="current_song_time_usb">currentSongTimeUSB</string>
    <string name="current_song_index_bt">currentSongIxBT</string>
    <string name="current_song_time_bt">currentSongTimeBT</string>
    <!-- My API key, Directions don't work, because of billing.-->
    <string name="api_key">AIzaSyAnQFT4Hx-V82-xsnoo4J1BL7BDIYhGYck</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="hashtag">#</string>
    <string name="zero">0</string>
    <string name="star">*</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="dial_up">Dial up</string>
    <string name="cancel">Cancel</string>
    <string name="phone_name1">John\'s iPhone</string>
    <string name="screen_brightness">Screen brightness</string>
    <string name="auto_brightness">Auto brightness</string>
    <string name="lock_screen">Lock screen</string>
    <string name="dim_screen">Dim screen</string>
    <string name="driving_mode">Driving mode</string>
    <string name="normal">Normal</string>
    <string name="sport">Sport</string>
    <string name="eco">ECO</string>
    <string name="traction_control">Traction control</string>
    <string name="parking_sensors">Parking sensors</string>
    <string name="auto_lock">Auto lock</string>
    <string name="task_completed_title">Konec naloge</string>
    <string name="bass">BASS</string>
    <string name="mid">MID</string>
    <string name="treble">TREBLE</string>
    <string name="current_figures">Current figures</string>
    <string name="km">km</string>
    <string name="gas_remaining">520</string>
    <string name="gas">--</string>
    <string name="lon100">l/100</string>
    <string name="distance">92 000</string>
    <string name="distance_tripA">1 345</string>
    <string name="gas_tripA">5.4</string>
    <string name="avg_tripA">74</string>
    <string name="kmh">km/h</string>
    <string name="tripA">Trip A</string>
    <string name="avg_tripB">120</string>
    <string name="gas_tripB">4.2</string>
    <string name="distance_tripB">2 543</string>
    <string name="tripB">Trip B</string>
    <string name="phone_name2">Galaxy 10+</string>
    <string name="phone_name3">Martin\'s iPhone</string>
    <string name="task_canceled_title">Naloga preklicana</string>
    <string name="task_canceled">Naloga je bila preklicana.</string>
    <string name="task_canceled_description">Task was canceled by user.</string>
    <string name="current_ip">Current server IP</string>


</resources>
