<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="750px"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/drivesettings_text_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driving_mode"
            android:textColor="@color/black_1"
            android:textSize="48px"
            android:layout_marginTop="40px"/>

        <RadioGroup
            android:id="@+id/drivesettings_group_mode"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/drivesettings_text_mode"
            android:layout_marginTop="40px"
            android:checkedButton="@id/drivesettings_button_normal">

            <com.example.carface.MyLogRadioButton
                android:id="@+id/drivesettings_button_normal"
                android:layout_width="210px"
                android:layout_height="78px"
                android:layout_marginEnd="35px"
                android:textSize="30px"
                android:textAllCaps="false"
                android:background="@drawable/radiobutton_50_green"
                android:button="@null"
                android:textColor="@color/button_color"
                android:textAlignment="center"
                android:text="@string/normal"/>

            <com.example.carface.MyLogRadioButton
                android:id="@+id/drivesettings_button_sport"
                android:layout_width="210px"
                android:layout_height="78px"
                android:layout_marginEnd="35px"
                android:textSize="30px"
                android:textAllCaps="false"
                android:background="@drawable/radiobutton_50_green"
                android:button="@null"
                android:textColor="@color/button_color"
                android:textAlignment="center"
                android:text="@string/sport"/>

            <com.example.carface.MyLogRadioButton
                android:id="@+id/drivesettings_button_eco"
                android:layout_width="210px"
                android:layout_height="78px"
                android:layout_marginEnd="35px"
                android:textSize="30px"
                android:textAllCaps="false"
                android:background="@drawable/radiobutton_50_green"
                android:button="@null"
                android:textColor="@color/button_color"
                android:textAlignment="center"
                android:text="@string/eco"/>

        </RadioGroup>

        <LinearLayout
            android:id="@+id/drivesettings_linear_traction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/drivesettings_group_mode"
            android:layout_marginTop="80px">

            <com.example.carface.MyLogSwitch
                android:id="@+id/drivesettings_switch_traction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:track="@drawable/track_switch"
                android:thumb="@drawable/thumb_switch"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36px"
                android:text="@string/traction_control"
                android:textColor="@color/black_1"
                android:layout_marginStart="35px"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/drivesettings_linear_sensors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/drivesettings_linear_traction"
            android:layout_marginTop="35px">

            <com.example.carface.MyLogSwitch
                android:id="@+id/drivesettings_switch_sensors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:track="@drawable/track_switch"
                android:thumb="@drawable/thumb_switch"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36px"
                android:text="@string/parking_sensors"
                android:layout_marginStart="35px"
                android:textColor="@color/black_1"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/drivesettings_linear_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/drivesettings_linear_sensors"
            android:layout_marginTop="35px">

            <com.example.carface.MyLogSwitch
                android:id="@+id/drivesettings_switch_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:track="@drawable/track_switch"
                android:thumb="@drawable/thumb_switch"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36px"
                android:text="@string/auto_lock"
                android:textColor="@color/black_1"
                android:layout_marginStart="35px"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>