<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="750px"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/screensettings_text_brightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_brightness"
            android:textColor="@color/black_1"
            android:textSize="48px"
            android:layout_marginTop="40px"/>

        <SeekBar
            android:id="@+id/screensettings_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/screensettings_text_brightness"
            android:layout_marginTop="60px"
            android:thumb="@drawable/thumb_big"
            android:progressDrawable="@drawable/seekbar_style"
            android:paddingStart="0px"
            android:paddingEnd="0px"
            android:thumbOffset="0px"/>

        <LinearLayout
            android:id="@+id/screensettings_linear_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/screensettings_seekbar"
            android:layout_marginTop="70px">

            <com.example.carface.MyLogSwitch
                android:id="@+id/screensettings_switch_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:track="@drawable/track_switch"
                android:thumb="@drawable/thumb_switch"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36px"
                android:text="@string/auto_brightness"
                android:textColor="@color/black_1"
                android:layout_marginStart="35px"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/screensettings_linear_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/screensettings_linear_auto"
            android:layout_marginTop="70px">

            <com.example.carface.MyLogSwitch
                android:id="@+id/screensettings_switch_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:track="@drawable/track_switch"
                android:thumb="@drawable/thumb_switch"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36px"
                android:text="@string/lock_screen"
                android:textColor="@color/black_1"
                android:layout_marginStart="35px"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/screensettings_linear_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/screensettings_linear_lock"
            android:layout_marginTop="35px">

            <com.example.carface.MyLogSwitch
                android:id="@+id/screensettings_switch_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:track="@drawable/track_switch"
                android:thumb="@drawable/thumb_switch"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_1"
                android:textSize="36px"
                android:text="@string/dim_screen"
                android:layout_marginStart="35px"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>